add: New folder for Review 1

--- a/Review 1/REVIEW_1.ipynb
+++ b/Review 1/REVIEW_1.ipynb
@@ -1476,7 +1476,7 @@
    "id": "cdbd6465",
    "metadata": {},
    "source": [
-    "The dataset used in this review is perfectly fitted for the logistic regression classification model. The model was able to accurately predict which drugs are supposed to be used based on the given features in the dataset. The model was 90% accurate, with a `roc_auc_score` of 99.34%, which indicates that it almost perfectly distinguishes classes."
+    "The dataset used in this review is perfectly fitted for the logistic regression classification model. The model was able to accurately predict which drugs are supposed to be used based on the given features in the dataset. The model was 90% accurate, with a `roc_auc_score` of 99.34%, which indicates that it almost perfectly distinguishes classes. The observations of the dataset is quite low, with only 200 observations. It is suggested to gather more data for the observations to give the model a higher accuracy."
    ]
   }
  ],
